--- a/css/style.css
+++ b/css/style.css
@@ -370,9 +370,9 @@ margin-bottom: 20px;
     z-index: -1;
 }
 
-.testimonial p{
+.slider-one p{
     color: #fff;
-    font-style: ;
+    font-style: italic;
 }
 
 .testimonial h4{
@@ -440,4 +440,23 @@ margin-bottom: 20px;
 }
 .testimonial:hover span::after{
     width: 48%;
+}
+
+.owl-dots .owl-dot span{
+    display: block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin: 5px;
+    border: 1px solid #999999;
+}
+.owl-dots .active span{
+    height: 13px;
+    width: 13px;
+    background: #ffffff;
+}
+.owl-dots{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
